# api

./: .clang-format  .gitignore  README.md  meson.build  meson_options.txt
.TAOS-CI/: .gbs.conf
.github/: CODEOWNERS
c/: README.md  capi-ml-common.pc.in  capi-ml-inference-pipeline.pc.in  capi-ml-inference-single.pc.in  capi-ml-inference.pc.in  capi-ml-service.pc.in  meson.build  nnstreamer-single.h  nnstreamer.h  tizen_error.h
c/doc/: nnstreamer_doc.h
c/include/: meson.build  ml-api-common.h  ml-api-experimental.h  ml-api-service-internal.h  ml-api-service.h  ml-api-staging.h  ml-lxm-service-internal.h  nnstreamer-capi-private.h  nnstreamer-single.h  nnstreamer-tizen-internal.h  nnstreamer.h
c/include/platform/: meson.build  tizen_error.h
c/src/: README.md  meson.build  ml-api-common-tizen-feature-check.c  ml-api-common.c  ml-api-inference-internal.c  ml-api-inference-internal.h  ml-api-inference-pipeline-internal.h  ml-api-inference-pipeline.c  ml-api-inference-single-internal.h  ml-api-inference-single.c  ml-api-inference-tizen-privilege-check.c  ml-api-internal.h  ml-api-remote-service.c  ml-api-service-agent-client.c  ml-api-service-common.c  ml-api-service-db.cc  ml-api-service-extension.c  ml-api-service-extension.h  ml-api-service-offloading.c  ml-api-service-offloading.h  ml-api-service-private.h  ml-api-service-query-client.c  ml-api-service-query.c  ml-api-service-query.h  ml-api-service-remote.c  ml-api-service-remote.h  ml-api-service-training-offloading.c  ml-api-service-training-offloading.h  ml-api-service.c  ml-lxm-service.c  ml-service-db.hh  nnstreamer-capi-pipeline.c  nnstreamer-capi-single.c  nnstreamer-capi-tizen-feature-check.c  nnstreamer-capi-tizen-privilege-check.c  nnstreamer-capi-util.c
daemon/: common.h  dbus-interface.h  gdbus-util.c  gdbus-util.h  main.c  meson.build  ml-agent-dbus-interface.c  ml-agent-interface.c  ml-agent.pc.in  ml-agentd.pc.in  model-dbus-impl.cc  modules.c  pipeline-dbus-impl.cc  pipeline-module.c  pipeline-module.cc  pkg-mgr.c  pkg-mgr.cc  pkg-mgr.h  resource-dbus-impl.cc  service-db.cc  service-db.hh  test-dbus-impl.c
daemon/include/: meson.build  ml-agent-dbus-interface.h  ml-agent-interface.h
daemon/includes/: dbus-interface.h  gdbus-util.h  log.h  ml-agent-dbus-interface.h  modules.h  pkg-mgr.h  service-db.hh  test-dbus-interface.h
dbus/: machine-learning-agent.conf.in  machine-learning-agent.service.in  meson.build  model-dbus.xml  org.tizen.machinelearning.service.service.in  pipeline-dbus.xml  resource-dbus.xml
java/: build-nnstreamer-android.sh  build-nnstreamer-ubuntu.sh  meson.build
java/android/: build-nnstreamer-android-lib.sh  gstreamer-1.16.2-patch-for-nns-tracing.patch  gstreamer-1.16.2-patch-for-nns.patch  gstreamer-1.20.0-patch-for-nns-tracing.patch  gstreamer_android-1.0.c.in.patch  settings.gradle
java/android/nnstreamer/: build.gradle
java/android/nnstreamer/src/androidTest/assets/: README.txt
java/android/nnstreamer/src/androidTest/java/org/nnsuite/nnstreamer/: APITestCommon.java  APITestCustomFilter.java  APITestMLInformation.java  APITestMLService.java  APITestPipeline.java  APITestSingleShot.java  APITestTensorsData.java  APITestTensorsInfo.java
java/android/nnstreamer/src/main/: AndroidManifest.xml
java/android/nnstreamer/src/main/java/org/nnsuite/nnstreamer/: CustomFilter.java  MLInformation.java  MLService.java  NNStreamer.java  Pipeline.java  SingleShot.java  TensorsData.java  TensorsInfo.java
java/android/nnstreamer/src/main/jni/: Android-flatbuf.mk  Android-gst-plugins.mk  Android-llama2c-prebuilt.mk  Android-llama2c.mk  Android-llamacpp-prebuilt.mk  Android-llamacpp.mk  Android-mxnet-prebuilt.mk  Android-mxnet.mk  Android-nnfw-prebuilt.mk  Android-nnfw.mk  Android-nnstreamer-prebuilt.mk  Android-nnstreamer.mk  Android-paho-mqtt-c.mk  Android-pytorch.mk  Android-qnn-prebuilt.mk  Android-qnn.mk  Android-snap-prebuilt.mk  Android-snap.mk  Android-snpe-prebuilt.mk  Android-snpe.mk  Android-tensorflow-lite-prebuilt.mk  Android-tensorflow-lite.mk  Android.mk  Application.mk  nnstreamer-android.h  nnstreamer-native-api.c  nnstreamer-native-common.c  nnstreamer-native-customfilter.c  nnstreamer-native-init.c  nnstreamer-native-internal.h  nnstreamer-native-pipeline.c  nnstreamer-native-service.c  nnstreamer-native-singleshot.c  nnstreamer-native.h
tests/: meson.build
tests/capi/: meson.build  unittest_capi_datatype_consistency.cc  unittest_capi_inference.cc  unittest_capi_inference_latency.cc  unittest_capi_inference_nnfw_runtime.cc  unittest_capi_inference_single.cc  unittest_capi_lxm_service.cc  unittest_capi_remote_service.cc  unittest_capi_service.cc  unittest_capi_service_agent_client.cc  unittest_capi_service_db_mock.cc  unittest_capi_service_extension.cc  unittest_capi_service_offloading.cc  unittest_capi_service_training_offloading.cc  unittest_util.c  unittest_util.h
tests/daemon/: meson.build  unittest_dbus_model.cc  unittest_gdbus_util.cc  unittest_ml_agent.cc  unittest_service_db.cc
tests/dbus/: meson.build  test-dbus-impl.c  test-dbus.xml
tests/mock/: meson.build  mock_package_manager.c  mock_package_manager.h
tests/services/: meson.build  org.tizen.machinelearning.service.service.in
tests/test_models/config/: config_pipeline_duplicated_name.conf  config_pipeline_imgclf.conf  config_pipeline_imgclf_key.conf  config_pipeline_invalid_info.conf  config_pipeline_no_info.conf  config_pipeline_no_name.conf  config_single_add.conf  config_single_flare.conf  config_single_imgclf.conf  config_single_imgclf_file.conf  config_single_imgclf_invalid_info.conf  config_single_imgclf_key.conf  config_single_imgclf_max_input.conf  config_single_llamacpp.conf  config_single_llamacpp_async.conf  config_single_no_model.conf  config_unknown_type.conf  offloading_service_receiver.conf  remote_service_receiver.conf  remote_service_sender.conf  service_offloading_receiver.conf  service_offloading_sender.conf  training_offloading_receiver.conf  training_offloading_sender.conf
tests/test_models/models/: mnist.ini
tests/test_models/models/metadata/: MANIFEST
(+31 files in other folders)
