option('enable-test', type: 'boolean', value: true)
option('install-test', type: 'boolean', value: false)
option('enable-tizen', type: 'boolean', value: false)
option('tizen-version-major', type: 'integer', min : 4, max : 9999, value: 9999) # 9999 means "not Tizen"
option('tizen-version-minor', type: 'integer', min : 0, max : 9999, value: 0)
option('enable-tizen-feature-check', type: 'boolean', value: false)
option('enable-tizen-privilege-check', type: 'boolean', value: false)
option('enable-ml-service', type: 'boolean', value: false)
option('java-home', type: 'string', value: '')
option('service-db-path', type: 'string', value: '.')
option('service-db-key-prefix', type: 'string', value: '')
